--- a/.github/workflows/zola-deploy.yml
+++ b/.github/workflows/zola-deploy.yml
@@ -26,7 +26,7 @@ jobs:
 
     # Runs a single command using the runners shell
     - name: Zola Deploy to Pages
-      # You may pin to the exact commit or the version.
+      # You may pin to the exact commit or the version
       # uses: shalzz/zola-deploy-action@60ff9c1e7b855b0960dc792e5b14f1dabc908531
       uses: shalzz/zola-deploy-action@v0.16.1
       env:
