--- a/.github/workflows/zola-deploy.yml
+++ b/.github/workflows/zola-deploy.yml
@@ -32,4 +32,4 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.ZOLA }}
       with:
-        set-safe-directory: /github/workspace
+        set-safe-directory: '*'
