--- a/.github/workflows/zola-deploy.yml
+++ b/.github/workflows/zola-deploy.yml
@@ -23,7 +23,10 @@ jobs:
     steps:
     - name: Checkout main
       uses: actions/checkout@v3
-
+    - name: Set ownership
+      # this is to fix GIT not liking owner of the checkout dir
+      run: |
+        chown -R $(id -u):$(id -g) $PWD
     # Runs a single command using the runners shell
     - name: Zola Deploy to Pages
       # You may pin to the exact commit or the version
