--- a/.github/workflows/zola-deploy.yml
+++ b/.github/workflows/zola-deploy.yml
@@ -29,7 +29,8 @@ jobs:
       # You may pin to the exact commit or the version
       # uses: shalzz/zola-deploy-action@60ff9c1e7b855b0960dc792e5b14f1dabc908531
       with:
-        script: git config --global --add safe.directory /github/workspace
+        script: |
+          git config --global --add safe.directory /github/workspace
       uses: shalzz/zola-deploy-action@v0.16.1
       env:
         GITHUB_TOKEN: ${{ secrets.ZOLA }}
