changed to exact commit

--- a/.github/workflows/zola-deploy.yml
+++ b/.github/workflows/zola-deploy.yml
@@ -23,13 +23,10 @@ jobs:
     steps:
     - name: Checkout main
       uses: actions/checkout@v3
-    - name: Add Safe Directory
-      run: |
-        git config --global --add safe.directory /github/workspace
     # Runs a single command using the runners shell
     - name: Zola Deploy to Pages
       # You may pin to the exact commit or the version
-      # uses: shalzz/zola-deploy-action@60ff9c1e7b855b0960dc792e5b14f1dabc908531
-      uses: shalzz/zola-deploy-action@v0.16.1
+      uses: shalzz/zola-deploy-action@60ff9c1e7b855b0960dc792e5b14f1dabc908531
+      # uses: shalzz/zola-deploy-action@v0.16.1
       env:
         GITHUB_TOKEN: ${{ secrets.ZOLA }}
